# bazel-rules-nodejs

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  defs.bzl  index.bzl  js_provider.bzl  package.json  providers.bzl
internal/: build_defs.bzl
internal/bazel_integration_test/: BUILD.bazel
internal/history-server/: BUILD.bazel
internal/http-server/: BUILD.bazel
internal/jasmine_node_test/: BUILD.bazel
internal/js_library/: BUILD.bazel
internal/linker/: BUILD.bazel
internal/node/: BUILD.bazel
internal/npm_install/: BUILD.bazel
internal/npm_package/: npm_package.bzl
internal/pkg_npm/: BUILD.bazel  pkg_npm.bzl
internal/pkg_web/: BUILD.bazel
internal/tsc_wrapped/: tsc_wrapped.d.ts
internal/tsetse/: failure.js  rule.js  runner.d.ts
internal/tsetse/rules/: check_return_value_rule.js
internal/tsetse/util/: pattern_config.js
internal/web_package/: BUILD.bazel
release/build_bazel_rules_nodejs/release/internal/: BUILD.bazel
release/npm_bazel_create/: index.js  package.json
release/npm_bazel_hide-bazel-files/: package.json
release/npm_bazel_jasmine/: README.md  package.json
release/npm_bazel_karma/: README.md  _BUILD.bazel  index.js  package.json
release/npm_bazel_labs/: package.json
release/npm_bazel_labs/webpack/: _BUILD.bazel  cli.d.ts  cli.js
release/npm_bazel_protractor/: README.md  _BUILD.bazel  package.json  protractor-utils.js
release/npm_bazel_stylus/: README.md  package.json
release/npm_bazel_typescript/: _BUILD.bazel  package.json
release/npm_bazel_typescript/internal/devserver/: _BUILD.bazel
release/npm_bazel_typescript/internal/protobufjs/: _BUILD.bazel
release/npm_bazel_typescript/internal/tsc_wrapped/: compiler_host.d.ts  compiler_host.js  diagnostics.js  tsc_wrapped.js  tsconfig.d.ts  tsconfig.js  worker.d.ts  worker.js
scripts/: build_packages_all.sh  clean_nested_workspaces.sh  packages.sh  touch_deps.sh
toolchains/node/: BUILD.bazel
(+12 files in other folders)
