# bazel_skylib mocked out
# load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@build_bazel_rules_nodejs//:defs.bzl", bzl_library = "dummy_bzl_library")
load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")


package(default_visibility = ["//visibility:public"])

exports_files([
    "web_package.bzl",
    "inject_html.bzl",
])

bzl_library(
    name = "bzl",
    srcs = glob(["*.bzl"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "node_modules_none",
)

nodejs_binary(
    name = "assembler",
    data = ["assembler.js"],
    entry_point = ":assembler.js",
    install_source_map_support = False,
    node_modules = ":node_modules_none",
)

nodejs_binary(
    name = "injector",
    data = [
        "injector.js",
        "//third_party/github.com/inikulin/parse5",
    ],
    entry_point = ":injector.js",
    install_source_map_support = False,
)


filegroup(
    name = "package_contents",
    srcs = glob(
        ["*"],
        exclude = ["*_spec.js"],
    ),
)
